fix spacing in scss

--- a/hugo/themes/endikau_theme/assets/scss/_text.scss
+++ b/hugo/themes/endikau_theme/assets/scss/_text.scss
@@ -59,7 +59,7 @@
     margin: 0;
     text-align: justify;
     text-justify: auto;
-    & + p {
+    &:not(:empty) + p {
       text-indent: 1.5em;
     }
   }
@@ -71,7 +71,7 @@
     color: var(--endikau-blue);
   } }
 
-  p:not(:has(+ p)) {
+  p:not(:has(+ p, + ul, )) {
     padding-bottom: 1.5rem;
   }
 
